--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@ionic/react": "^8.3.2",
-    "firebase": "^10.14.1",
+    "bcrypt": "^5.1.1",
     "ionicons": "^7.4.0",
+    "js-cookie": "^3.0.5",
+    "mongoose": "^8.7.2",
     "next": "14.2.14",
+    "next-auth": "^4.24.8",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
