--- a/package.json
+++ b/package.json
@@ -15,19 +15,25 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@ionic/react": "^8.3.2",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "ionicons": "^7.4.0",
     "js-cookie": "^3.0.5",
     "mongoose": "^8.7.2",
     "next": "14.2.14",
     "next-auth": "^4.24.8",
+    "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.16",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "jsonwebtoken": "^9.0.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
