--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcryptjs": "^2.4.3",
     "ionicons": "^7.4.0",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.7.2",
     "next": "14.2.14",
     "next-auth": "^4.24.8",
