--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@ionic/react": "^8.3.2",
+    "@tanstack/react-table": "^8.20.5",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "ionicons": "^7.4.0",
