--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@ionic/react": "^8.3.2",
+    "@stripe/stripe-js": "^4.9.0",
     "@tanstack/react-table": "^8.20.5",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -25,7 +26,8 @@
     "next-auth": "^4.24.8",
     "nodemailer": "^6.9.15",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "stripe": "^17.2.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
